@startuml MCD_IIT_System
!define LIGHTYELLOW #FFFACD
!define LIGHTBLUE #E0F6FF
!define LIGHTGREEN #F0FFF0
!define LIGHTPINK #FFE4E1

title Modèle Conceptuel de Données (MCD) - Système IIT
caption Université Privée Bilingue IIT - Phases 1 & 2

' ===== ENTITÉS PHASE 1 =====

entity ETUDIANT <<ETUDIANT,LIGHTYELLOW>> {
    * **id_etudiant** : INT
    --
    * matricule : VARCHAR(20) <<U>>
    * nom : VARCHAR(50)
    * prenom : VARCHAR(50)
    * date_naissance : DATE
    lieu_naissance : VARCHAR(100)
    * sexe : CHAR(1)
    adresse : TEXT
    telephone : VARCHAR(20)
    email : VARCHAR(100) <<U>>
    nationalite : VARCHAR(50)
    statut : VARCHAR(20)
    * date_creation : DATETIME
}

entity CLASSE <<CLASSE,LIGHTBLUE>> {
    * **id_classe** : INT
    --
    * nom_classe : VARCHAR(50)
    * niveau : VARCHAR(20)
    section : VARCHAR(10)
    * annee_academique : VARCHAR(9)
    effectif_max : INT
    statut : VARCHAR(20)
}

entity FILIERE <<FILIERE,LIGHTGREEN>> {
    * **id_filiere** : INT
    --
    * nom_filiere : VARCHAR(100)
    description : TEXT
    * duree_etudes : INT
    statut : VARCHAR(20)
}

entity SCOLARITE <<SCOLARITE,LIGHTPINK>> {
    * **id_scolarite** : INT
    --
    * #id_filiere : INT
    * montant_annuel : DECIMAL(10,2)
    * annee_academique : VARCHAR(9)
    statut : VARCHAR(20)
}

entity INSCRIPTION <<INSCRIPTION,LIGHTYELLOW>> {
    * **id_inscription** : INT
    --
    * #id_etudiant : INT
    * #id_classe : INT
    * #id_filiere : INT
    * annee_academique : VARCHAR(9)
    * date_inscription : DATE
    * type_inscription : VARCHAR(20)
    * montant_inscription : DECIMAL(10,2)
    statut : VARCHAR(20)
}

entity SERVICE <<SERVICE,LIGHTBLUE>> {
    * **id_service** : INT
    --
    * nom_service : VARCHAR(100)
    description : TEXT
    * montant_mensuel : DECIMAL(10,2)
    statut : VARCHAR(20)
}

entity SOUSCRIPTION_SERVICE <<SOUSCRIPTION,LIGHTGREEN>> {
    * **id_souscription** : INT
    --
    * #id_etudiant : INT
    * #id_service : INT
    * date_debut : DATE
    date_fin : DATE
    date_modification : DATETIME
    motif_fin : VARCHAR(200)
    statut : VARCHAR(20)
}

entity PAIEMENT <<PAIEMENT,LIGHTPINK>> {
    * **id_paiement** : INT
    --
    * #id_etudiant : INT
    * type_paiement : VARCHAR(20)
    * montant : DECIMAL(10,2)
    * date_paiement : DATETIME
    * mode_paiement : VARCHAR(20)
    reference : VARCHAR(100)
    statut : VARCHAR(20)
}

entity DELEGUE <<DELEGUE,LIGHTYELLOW>> {
    * **id_delegue** : INT
    --
    * #id_etudiant : INT
    * #id_classe : INT
    * fonction : VARCHAR(20)
    * annee_academique : VARCHAR(9)
    date_election : DATE
    * date_debut : DATE
    date_fin : DATE
    statut : VARCHAR(20)
}

' ===== ENTITÉS PHASE 2 =====

entity ENSEIGNANT <<ENSEIGNANT,LIGHTBLUE>> {
    * **id_enseignant** : INT
    --
    * matricule : VARCHAR(20) <<U>>
    * nom : VARCHAR(50)
    * prenom : VARCHAR(50)
    email : VARCHAR(100) <<U>>
    telephone : VARCHAR(20)
    specialite : VARCHAR(100)
    grade : VARCHAR(50)
    niveau_experience : INT
    statut : VARCHAR(20)
    * date_creation : DATETIME
}

entity COURS <<COURS,LIGHTGREEN>> {
    * **id_cours** : INT
    --
    * nom_cours : VARCHAR(50)
    * code_cours : VARCHAR(10) <<U>>
    description : VARCHAR(500)
    * #id_enseignant : INT
    * #id_classe : INT
    * #id_filiere : INT
    nombre_heures : INT
    coefficient : DECIMAL(5,2)
    semestre : VARCHAR(10)
    annee_academique : VARCHAR(9)
    statut : VARCHAR(20)
    * date_creation : DATETIME
}

entity ABSENCE <<ABSENCE,LIGHTPINK>> {
    * **id_absence** : INT
    --
    * #id_etudiant : INT
    * #id_cours : INT
    * date_absence : DATE
    type_absence : VARCHAR(50)
    motif : VARCHAR(500)
    justifiee : BOOLEAN
    duree_heures : DECIMAL(4,2)
    * date_saisie : DATETIME
}

entity HONORAIRE_ENSEIGNANT <<HONORAIRE,LIGHTYELLOW>> {
    * **id_honoraire** : INT
    --
    * #id_enseignant : INT
    * #id_cours : INT
    * mois : VARCHAR(20)
    * annee : INT
    montant_base : DECIMAL(10,2)
    taux_horaire : DECIMAL(8,2)
    nombre_heures : INT
    primes : DECIMAL(10,2)
    retenues : DECIMAL(10,2)
    * montant_total : DECIMAL(12,2)
    statut_paiement : VARCHAR(20)
    * date_creation : DATETIME
}

' ===== RELATIONS =====

' Phase 1 Relations
ETUDIANT ||--o{ INSCRIPTION : "s'inscrit"
CLASSE ||--o{ INSCRIPTION : "accueille"
FILIERE ||--o{ INSCRIPTION : "forme"
FILIERE ||--o{ SCOLARITE : "a_tarif"

ETUDIANT ||--o{ SOUSCRIPTION_SERVICE : "souscrit"
SERVICE ||--o{ SOUSCRIPTION_SERVICE : "propose"

ETUDIANT ||--o{ PAIEMENT : "effectue"

ETUDIANT ||--o{ DELEGUE : "peut_être"
CLASSE ||--o{ DELEGUE : "a_délégué"

' Phase 2 Relations
ENSEIGNANT ||--o{ COURS : "enseigne"
CLASSE ||--o{ COURS : "suit"
FILIERE ||--o{ COURS : "comprend"

ETUDIANT ||--o{ ABSENCE : "manque"
COURS ||--o{ ABSENCE : "enregistre"

ENSEIGNANT ||--o{ HONORAIRE_ENSEIGNANT : "perçoit"
COURS ||--o{ HONORAIRE_ENSEIGNANT : "génère"

' ===== LÉGENDE =====
legend right
    |<color:LIGHTYELLOW>| **Entités Étudiants** |
    |<color:LIGHTBLUE>| **Entités Structure** |
    |<color:LIGHTGREEN>| **Entités Pédagogie** |
    |<color:LIGHTPINK>| **Entités Finances** |
    ----
    **Phase 1** : Inscriptions & Règlements
    **Phase 2** : Enseignements & Suivi
    ----
    * Champ obligatoire
    # Clé étrangère
    <<U>> Unique
endlegend

@enduml